removed warnings from controller